--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.3.2
+certifi==2020.12.5
+chardet==4.0.0
 Django==3.1.7
+idna==2.10
 panda3d==1.10.7
 Pillow==8.2.0
 pytz==2021.1
+requests==2.25.1
 sqlparse==0.4.1
 typing-extensions==3.7.4.3
+urllib3==1.26.4
