--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.2
 certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.7
+gunicorn==20.1.0
 idna==2.10
 panda3d==1.10.7
 Pillow==8.2.0
@@ -10,3 +11,4 @@ requests==2.25.1
 sqlparse==0.4.1
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+whitenoise==5.2.0
