--- a/.gitignore
+++ b/.gitignore
@@ -254,5 +254,8 @@ Thumbs.db #thumbnail cache on Windows
 
 ### vscode ###
 .vscode/*
-.vscode
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
