--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# credentials.py
+credentials.py
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
