added credentials.py to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-credentials.py
-
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -256,3 +254,6 @@ Thumbs.db #thumbnail cache on Windows
 
 ### vscode ###
 .vscode/*
+
+### Credentials ##
+credentials.py
