--- a/.gitignore
+++ b/.gitignore
@@ -159,13 +159,10 @@ pytestdebug.log
 *.pot
 
 # Django stuff:
-# Commenting it
-
-# *.log
-# local_settings.py
-# db.sqlite3
-# db.sqlite3-journal
-
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
 
 # Flask stuff:
