--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==3.1.7
 gunicorn==20.1.0
 idna==2.10
 marshmallow==3.12.1
-panda3d==1.10.7
+Panda3D==1.10.7
 Pillow==8.2.0
 pytz==2021.1
 requests==2.25.1
