--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,13 @@
-asgiref==3.3.2
-certifi==2020.12.5
-cffi==1.14.6
-chardet==4.0.0
-cryptography==3.4.7
-defusedxml==0.7.1
-Django==3.1.13
-gunicorn==20.1.0
-idna==2.10
-marshmallow==3.12.1
-oauthlib==3.1.1
+appdirs==1.4.4
+black==21.6b0
+click==8.0.1
+colorama==0.4.4
+importlib-metadata==4.6.1
+mypy-extensions==0.4.3
 Panda3D==1.10.7
-Pillow==8.3.0
-pycparser==2.20
-PyJWT==2.1.0
-python-decouple==3.4
-python3-openid==3.2.0
-pytz==2021.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-sqlparse==0.4.1
-typing-extensions==3.7.4.3
-urllib3==1.26.5
-whitenoise==5.2.0
+pathspec==0.8.1
+regex==2021.7.6
+toml==0.10.2
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
+zipp==3.5.0
