--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -3,15 +3,15 @@ name: black
 on: [push, pull_request]
 
 jobs:
-    black:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
-                with:
-                    python-version: 3.7
-            - run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-            - run: |
-                black --check --verbose .
+  black:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - run: |
+          black --check --verbose .
