--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -4,12 +4,12 @@ on: [push, pull_request]
 
 jobs:
   black:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: 3.7
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
