get heroku app name from secrets

--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_KEY}}
-          heroku_app_name: "jonakadiptakalita"
+          heroku_app_name: ${{secrets.HEROKU_NAME}}
           heroku_email: "jonakadiptakalita@gmail.com"
