--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,21 @@ black==21.9b0
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
+charset-normalizer==2.0.5
 click==8.0.1
 colorama==0.4.4
 cryptography==35.0.0
 defusedxml==0.7.1
 Django==3.2.7
+django-appconf==1.0.4
+django-progressive-web-app==0.1.1
 gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.8.1
 marshmallow==3.13.0
 mypy-extensions==0.4.3
 oauthlib==3.1.1
-Panda3D==1.10.10
+Panda3D==1.10.7
 pathspec==0.9.0
 Pillow==8.3.2
 platformdirs==2.4.0
@@ -26,6 +29,7 @@ pytz==2021.1
 regex==2021.9.30
 requests==2.26.0
 requests-oauthlib==1.3.0
+six==1.16.0
 sqlparse==0.4.2
 tomli==1.2.1
 typed-ast==1.4.3
