--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 black==21.9b0
+cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
@@ -11,24 +12,33 @@ defusedxml==0.7.1
 Django==3.2.8
 django-appconf==1.0.5
 django-progressive-web-app==0.1.1
+googleapis-common-protos==1.53.0
+grpcio==1.42.0
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.1
+MarkupSafe==2.0.1
 marshmallow==3.14.0
 mypy-extensions==0.4.3
 oauthlib==3.1.1
-Panda3D==1.10.10
+Panda3D==1.10.7
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
+protobuf==3.19.1
+psycopg2==2.9.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==2.3.0
+pyparsing==3.0.6
 python-decouple==3.5
 python3-openid==3.2.0
 pytz==2021.3
 regex==2021.10.23
 requests==2.26.0
 requests-oauthlib==1.3.0
+rsa==4.7.2
 six==1.16.0
 sqlparse==0.4.2
 tomli==1.2.2
