--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,10 +10,12 @@ cryptography==35.0.0
 defusedxml==0.7.1
 Django==3.2.8
 django-appconf==1.0.5
-django-progressive-web-app==0.1.1
+django-filter==21.1
+djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.1
+Markdown==3.3.6
 marshmallow==3.14.0
 mypy-extensions==0.4.3
 oauthlib==3.1.1
