--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "next": "latest",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
         "@types/node": "17.0.4",
