--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "check:version": "ncu"
     },
     "dependencies": {
+        "@badrap/bar-of-progress": "^0.1.2",
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
         "autoprefixer": "^10.4.0",
         "eslint": "^8.8.0",
         "eslint-plugin-react": "^7.28.0",
+        "next-pwa": "^5.4.4",
         "npm-check-updates": "^12.2.1",
         "postcss": "^8.4.5",
         "prettier": "^2.5.1",
