--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-typed": "^1.2.0",
         "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
