--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
+        "@heroicons/react": "^1.0.5",
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
