--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,9 @@ cryptography==35.0.0
 defusedxml==0.7.1
 Django==3.2.8
 django-appconf==1.0.5
+django-cors-headers==3.11.0
 django-filter==21.1
+django-phonenumber-field==6.0.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
@@ -21,6 +23,7 @@ mypy-extensions==0.4.3
 oauthlib==3.1.1
 Panda3D==1.10.10
 pathspec==0.9.0
+phonenumbers==8.12.42
 Pillow==8.4.0
 platformdirs==2.4.0
 pycparser==2.20
