--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
         "@heroicons/react": "^1.0.5",
+        "@types/lodash": "^4.14.178",
+        "axios": "^0.25.0",
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
