--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -31,6 +31,7 @@
     "rules": {
         "react/react-in-jsx-scope": 0,
         "@typescript-eslint/no-empty-function": 0,
-        "@typescript-eslint/no-explicit-any": 0
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-non-null-assertion": 0
     }
 }
