--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@badrap/bar-of-progress": "^0.1.2",
+        "@hcaptcha/react-hcaptcha": "^1.1.0",
         "@headlessui/react": "^1.4.3",
         "@heroicons/react": "^1.0.5",
         "@types/lodash": "^4.14.178",
