--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-typed": "^1.2.0",
+        "recoil": "^0.6.1",
         "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
