--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "@types/lodash": "^4.14.178",
         "axios": "^0.25.0",
         "next": "latest",
+        "next-auth": "^4.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-typed": "^1.2.0",
