changed pic name of call of duty moder warfare 3

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ click==8.0.3
 colorama==0.4.4
 cryptography==35.0.0
 defusedxml==0.7.1
-Django==3.2.8
+Django==4.0.2
 django-appconf==1.0.5
 django-cors-headers==3.11.0
 django-filter==21.1
@@ -39,6 +39,7 @@ sqlparse==0.4.2
 tomli==1.2.2
 typed-ast==1.4.3
 typing-extensions==3.10.0.2
+tzdata==2021.5
 urllib3==1.26.7
 whitenoise==5.3.0
 zipp==3.6.0
