--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-loader-spinner": "^5.1.3",
         "react-typed": "^1.2.0",
         "recoil": "^0.6.1",
         "tailwind-scrollbar-hide": "^1.1.7"
