--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
         "@hcaptcha/react-hcaptcha": "^1.1.0",
         "@headlessui/react": "^1.4.3",
         "@heroicons/react": "^1.0.5",
+        "@types/cookie": "^0.4.1",
         "@types/lodash": "^4.14.178",
         "axios": "^0.25.0",
+        "cookie": "^0.4.2",
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
