its Website not Webiste

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "JAK Webiste",
+    "short_name": "JAK Website",
     "name": "JAK Website",
     "description": "Website of Jonak Adipta Kalita",
     "icons": [
