--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-loader-spinner": "^5.1.3",
+        "react-skillbars": "^2.0.1",
         "react-typed": "^1.2.0",
         "recoil": "^0.6.1",
         "tailwind-scrollbar-hide": "^1.1.7"
