--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "next": "latest",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hot-toast": "^2.4.0",
         "react-loader-spinner": "^5.3.4",
         "react-skillbars": "^2.0.1",
         "react-typed": "^1.2.0",
