--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,13 @@
 {
     "builds": [{
-        "src": "vercel_app/wsgi.py",
+        "src": "main_website/wsgi.py",
         "use": "@ardnt/vercel-python-wsgi",
         "config": { "maxLambdaSize": "15mb" }
     }],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "vercel_app/wsgi.py"
+            "dest": "main_website/wsgi.py"
         }
     ]
 }
