--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,7 @@
 {
     "builds": [{
         "src": "main_website/wsgi.py",
-        "use": "@ardnt/vercel-python-wsgi",
-        "config": {
-			"maxLambdaSize": "15mb",
-			"runtime": "python3.9"
-		}
+        "use": "@vercel/python"
     }],
     "routes": [
         {
