Revert "i hope vercel works now..."
This reverts commit 90681fc124ed15584e9a08d47dbc3b97e491ab09.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,11 @@
 {
     "builds": [{
         "src": "main_website/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@ardnt/vercel-python-wsgi",
+        "config": {
+			"maxLambdaSize": "15mb",
+			"runtime": "python3.9"
+		}
     }],
     "routes": [
         {
