--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,27 @@
 {
-    "builds": [{
-        "src": "main_website/wsgi.py",
-        "use": "@ardnt/vercel-python-wsgi",
-        "config": {
-			"maxLambdaSize": "15mb",
-			"runtime": "python3.9"
-		}
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "main_website/wsgi.py"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "main_website/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "main_website/wsgi.py"
+    }
+  ]
 }
