--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.25.0",
         "cookie": "^0.4.2",
         "next": "latest",
+        "next-themes": "^0.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.4.0",
