--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ click==8.0.3
 colorama==0.4.4
 cryptography==35.0.0
 defusedxml==0.7.1
-Django==3.2.16
+Django==3.2.15
 django-appconf==1.0.5
 django-cors-headers==3.11.0
 django-filter==21.1
@@ -18,14 +18,17 @@ djangorestframework-simplejwt==5.0.0
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.1
+joblib==1.2.0
 Markdown==3.3.6
 marshmallow==3.14.0
 mypy-extensions==0.4.3
+nltk==3.8
+numpy==1.24.0
 oauthlib==3.2.1
 Panda3D==1.10.10
 pathspec==0.9.0
 phonenumbers==8.12.42
-Pillow==9.3.0
+Pillow==9.0.1
 platformdirs==2.4.0
 psycopg2-binary==2.9.5
 pycparser==2.20
@@ -38,7 +41,9 @@ requests==2.26.0
 requests-oauthlib==1.3.0
 six==1.16.0
 sqlparse==0.4.2
+tensorflow==2.6.0
 tomli==1.2.2
+tqdm==4.64.1
 typed-ast==1.4.3
 typing-extensions==3.10.0.2
 tzdata==2021.5
