--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,78 +1,28 @@
-absl-py==0.15.0
-asgiref==3.4.1
-astunparse==1.6.3
-black==21.9b0
-cachetools==5.2.0
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.7
-clang==5.0
-click==8.0.3
-colorama==0.4.4
-cryptography==41.0.0
-defusedxml==0.7.1
+asgiref==3.7.2
+black==23.3.0
+click==8.1.3
+colorama==0.4.6
 Django==3.2.18
 django-appconf==1.0.5
-django-cors-headers==3.11.0
-django-filter==21.1
-django-phonenumber-field==6.0.0
-djangorestframework==3.13.1
-djangorestframework-simplejwt==5.0.0
-flatbuffers==1.12
-gast==0.4.0
-google-auth==2.15.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.51.1
+django-cors-headers==4.0.0
+django-filter==23.2
+django-phonenumber-field==7.1.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
-h5py==3.1.0
-idna==3.3
-importlib-metadata==4.8.1
-joblib==1.2.0
-keras==2.11.0
-Keras-Preprocessing==1.1.2
-Markdown==3.3.6
-MarkupSafe==2.1.1
-marshmallow==3.14.0
-mypy-extensions==0.4.3
-nltk==3.8
-numpy==1.22.0
-oauthlib==3.2.2
-opt-einsum==3.3.0
-panda3d==1.10.10
-pathspec==0.9.0
-phonenumbers==8.12.42
-Pillow==9.0.1
-platformdirs==2.4.0
-protobuf==3.20.2
-psycopg2-binary==2.9.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-PyJWT==2.4.0
-python-decouple==3.5
-python3-openid==3.2.0
-pytz==2021.3
-regex==2021.10.23
-requests==2.31.0
-requests-oauthlib==1.3.0
-rsa==4.9
-six==1.15.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.1
+phonenumbers==8.13.13
+Pillow==9.5.0
+platformdirs==3.5.3
+psycopg2-binary==2.9.6
+PyJWT==2.7.0
+python-decouple==3.8
+pytz==2023.3
+six==1.16.0
 sqlparse==0.4.4
-tensorboard==2.11.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.3
-tensorflow-estimator==2.11.0
-termcolor==1.1.0
-tomli==1.2.2
-tqdm==4.64.1
-typed-ast==1.4.3
-typing-extensions==3.7.4.3
-tzdata==2021.5
-urllib3==1.26.7
-Werkzeug==2.2.2
-whitenoise==5.3.0
-wrapt==1.12.1
-zipp==3.6.0
+tomli==2.0.1
+typing_extensions==4.6.3
+tzdata==2023.3
+whitenoise==6.4.0
