--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,40 +13,41 @@
         "check:version": "ncu"
     },
     "dependencies": {
-        "@badrap/bar-of-progress": "^0.1.2",
-        "@hcaptcha/react-hcaptcha": "^1.1.0",
-        "@headlessui/react": "^1.4.3",
-        "@heroicons/react": "^1.0.5",
-        "@types/cookie": "^0.4.1",
-        "@types/lodash": "^4.14.178",
-        "axios": "^0.25.0",
-        "cookie": "^0.4.2",
-        "next": "latest",
+        "@badrap/bar-of-progress": "^0.2.2",
+        "@hcaptcha/react-hcaptcha": "^1.8.1",
+        "@headlessui/react": "^1.7.15",
+        "@heroicons/react": "^2.0.18",
+        "@xxjonakadiptaxx/jak_javascript_package": "^3.3.3",
+        "axios": "^1.4.0",
+        "cookie": "^0.5.0",
+        "next": "13.4.5",
         "next-themes": "^0.2.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-hot-toast": "^2.4.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hot-toast": "^2.4.1",
         "react-loader-spinner": "^5.3.4",
-        "react-skillbars": "^2.0.1",
+        "react-skillbars": "^2.1.0",
         "react-typed": "^1.2.0",
-        "recoil": "^0.6.1",
+        "recoil": "^0.7.7",
         "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
-        "@types/node": "17.0.4",
-        "@types/react": "17.0.38",
-        "@typescript-eslint/eslint-plugin": "^5.10.1",
-        "@typescript-eslint/parser": "^5.10.1",
-        "@xxjonakadiptaxx/jak_javascript_package": "^3.3.3",
-        "autoprefixer": "^10.4.0",
-        "eslint": "^8.8.0",
-        "eslint-plugin-react": "^7.28.0",
-        "next-pwa": "^5.4.4",
-        "npm-check-updates": "^12.2.1",
-        "postcss": "^8.4.5",
-        "prettier": "^2.5.1",
-        "prettier-plugin-tailwindcss": "^0.1.1",
-        "tailwindcss": "^3.0.7",
-        "typescript": "4.5.4"
+        "@types/cookie": "^0.5.1",
+        "@types/lodash": "^4.14.195",
+        "@types/node": "20.3.0",
+        "@types/react": "18.2.11",
+        "@types/react-dom": "18.2.4",
+        "@typescript-eslint/eslint-plugin": "^5.59.9",
+        "@typescript-eslint/parser": "^5.59.9",
+        "autoprefixer": "10.4.14",
+        "eslint": "8.42.0",
+        "eslint-plugin-react": "^7.32.2",
+        "next-pwa": "^5.6.0",
+        "npm-check-updates": "^16.10.12",
+        "postcss": "8.4.24",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.3.0",
+        "tailwindcss": "3.3.2",
+        "typescript": "5.1.3"
     }
 }
