--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,26 +13,19 @@
         "check:version": "ncu"
     },
     "dependencies": {
-        "@badrap/bar-of-progress": "^0.2.2",
         "@hcaptcha/react-hcaptcha": "^1.8.1",
         "@headlessui/react": "^1.7.15",
         "@heroicons/react": "^2.0.18",
         "@xxjonakadiptaxx/jak_javascript_package": "^3.3.3",
         "axios": "^1.4.0",
-        "cookie": "^0.5.0",
         "next": "13.4.5",
         "next-themes": "^0.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hot-toast": "^2.4.1",
-        "react-loader-spinner": "^5.3.4",
-        "react-skillbars": "^2.1.0",
-        "react-typed": "^1.2.0",
-        "recoil": "^0.7.7",
-        "tailwind-scrollbar-hide": "^1.1.7"
+        "react-typed": "^1.2.0"
     },
     "devDependencies": {
-        "@types/cookie": "^0.5.1",
         "@types/lodash": "^4.14.195",
         "@types/node": "20.3.0",
         "@types/react": "18.2.11",
