--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hot-toast": "^2.4.1",
-        "react-social-icons": "^5.15.0",
-        "react-typed": "^1.2.0"
+        "react-simple-typewriter": "^5.0.1",
+        "react-social-icons": "^5.15.0"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.195",
