--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
         "next-themes": "^0.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-typed": "^1.2.0"
+        "react-typed": "^1.2.0",
+        "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.195",
