--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "next": "15.4.5",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "tailwind-merge": "^3.3.1"
+        "tailwind-merge": "^3.3.1",
+        "tailwind-scrollbar-hide": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
